blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-app
      version: blue
  template:
    metadata:
      labels:
        app: movie-app
        version: blue
    spec:
      containers:
        - name: movie-app
          image: kiprotich507/movie-recommendation-backend:latest
          ports:
            - containerPort: 8000
