deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      containers:
        - name: movie-app
          image: kiprotich507/movie-recommendation-backend:latest
          ports:
            - containerPort: 8000
