ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: movie.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 80
